@@ -1,16 +1,12 @@
 package com.bancosol.mapper;
 
-import com.bancosol.dto.CampaniaDTO;
-import com.bancosol.dto.ContactoDTO;
 import com.bancosol.dto.CoordinadorDTO;
 import com.bancosol.entities.Campania;
 import com.bancosol.entities.Contacto;
 import com.bancosol.entities.Coordinador;
-import com.bancosol.entities.EntidadColaboradora;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CoordinadorMapper extends MapperDTO<CoordinadorDTO, Coordinador> {
@@ -33,11 +29,9 @@ public class CoordinadorMapper extends MapperDTO<CoordinadorDTO, Coordinador> {
                 .permisoModificar(coordinador.getPermisoModificar())
                 .usuarioId(coordinador.getUsuario() != null ? coordinador.getUsuario().getId() : null)
                 .contactoId(contacto != null ? contacto.getId() : null)
-                .entidadId(obtenerEntidadId(coordinador))
-                .idsCampanias(obtenerIdsCampanias(coordinador))
-                .nombresCampanias(obtenerNombresCampanias(coordinador))
-                .contacto(toContactoDTO(contacto))
-                .campanias(mapearCampanias(coordinador))
+                .entidadId(null)
+                .idsCampanias(extraerIdsCampanias(coordinador))
+                .nombresCampanias(extraerNombresCampanias(coordinador))
                 .build();
     }
 
@@ -56,32 +50,19 @@ public class CoordinadorMapper extends MapperDTO<CoordinadorDTO, Coordinador> {
         return coordinador;
     }
 
-    private Long obtenerEntidadId(Coordinador coordinador) {
-        if (coordinador.getEntidades() == null || coordinador.getEntidades().isEmpty()) {
-            return null;
-        }
-
-        return coordinador.getEntidades()
-                .stream()
-                .filter(entidad -> entidad.getId() != null)
-                .map(EntidadColaboradora::getId)
-                .findFirst()
-                .orElse(null);
-    }
-
-    private List<Long> obtenerIdsCampanias(Coordinador coordinador) {
+    private List<Long> extraerIdsCampanias(Coordinador coordinador) {
         if (coordinador.getCampanias() == null) {
             return List.of();
         }
 
         return coordinador.getCampanias()
                 .stream()
-                .filter(campania -> campania.getId() != null)
                 .map(Campania::getId)
-                .collect(Collectors.toList());
+                .filter(id -> id != null)
+                .toList();
     }
 
-    private List<String> obtenerNombresCampanias(Coordinador coordinador) {
+    private List<String> extraerNombresCampanias(Coordinador coordinador) {
         if (coordinador.getCampanias() == null) {
             return List.of();
         }
@@ -89,45 +70,7 @@ public class CoordinadorMapper extends MapperDTO<CoordinadorDTO, Coordinador> {
         return coordinador.getCampanias()
                 .stream()
                 .map(Campania::getNombre)
-                .collect(Collectors.toList());
-    }
-
-    private List<CampaniaDTO> mapearCampanias(Coordinador coordinador) {
-        if (coordinador.getCampanias() == null) {
-            return List.of();
-        }
-
-        return coordinador.getCampanias()
-                .stream()
-                .map(this::toCampaniaDTO)
-                .collect(Collectors.toList());
-    }
-
-    private CampaniaDTO toCampaniaDTO(Campania campania) {
-        if (campania == null) {
-            return null;
-        }
-
-        return CampaniaDTO.builder()
-                .id(campania.getId())
-                .nombre(campania.getNombre())
-                .activa(campania.getActiva())
-                .fechaInicio(campania.getFechaInicio())
-                .fechaFin(campania.getFechaFin())
-                .anio(campania.getAnio())
-                .build();
-    }
-
-    private ContactoDTO toContactoDTO(Contacto contacto) {
-        if (contacto == null) {
-            return null;
-        }
-
-        return ContactoDTO.builder()
-                .id(contacto.getId())
-                .nombre(contacto.getNombre())
-                .email(contacto.getEmail())
-                .telefono(contacto.getTelefono())
-                .build();
+                .filter(nombre -> nombre != null && !nombre.isBlank())
+                .toList();
     }
 }
